--- a/QuoteService/QuoteService.csproj
+++ b/QuoteService/QuoteService.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\QuoteShared\QuoteShared.csproj" />
+  </ItemGroup>
+
 
 </Project>
