add in screenshot to readme, and basic console UX

--- a/QuoteShared/QuoteShared.csproj
+++ b/QuoteShared/QuoteShared.csproj
@@ -8,4 +8,10 @@
     <PackageReference Include="Bogus" Version="28.4.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Konsole">
+      <HintPath>..\..\konsole\Konsole\bin\Release\Konsole.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
