--- a/QuoteClient.Akka/QuoteClient.Akka.csproj
+++ b/QuoteClient.Akka/QuoteClient.Akka.csproj
@@ -5,4 +5,22 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Goblinfactory.Konsole" Version="3.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\QuoteShared\QuoteShared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Konsole">
+      <HintPath>..\..\konsole\Konsole\bin\Release\Konsole.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Actors\" />
+  </ItemGroup>
+
 </Project>
