--- a/QuoteClient.Akka/QuoteClient.Akka.csproj
+++ b/QuoteClient.Akka/QuoteClient.Akka.csproj
@@ -6,11 +6,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="panel.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="panel.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Akka" Version="1.4.0-beta3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\QuoteShared\QuoteShared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Internal\" />
   </ItemGroup>
 
 </Project>
